--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		</style>
 	</head>
 	<body>
-		<script type="module" src="/three.js"></script>
+		<script type="module" src="/spotLight_Explanation.js"></script>
 	</body>
 </html>
